# SuperCalc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Program.cs  main.cpp
